added palindrome logic for word

--- a/Palindrome_checker/index.html
+++ b/Palindrome_checker/index.html
@@ -7,11 +7,12 @@
 </head>
 <body>
     <h3>Palindrome Checker</h3>
-    <label for="name">Enter name</label>
+    <label for="name">Enter a word or a number</label>
     <input type="text" id =name1>
-    <button onclick="getValue()">Check</button>
+    <button onclick="isPalndrome()">Check</button>
 
     <div id="output"></div>
+    
 
     <script src="index.js"></script>
 
